add feature CRUD

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mssql-jdbc.jar=web\\WEB-INF\\resources\\mssql-jdbc.jar
+file.reference.mssql-jdbc.jar=web\\resources\\libs\\mssql-jdbc.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
